--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="CSS/modal.css">
     <link rel="stylesheet" href="CSS/buttons.css">
     <link rel="stylesheet" href="CSS/responsive.css">
-    
+    <link rel="shortcut icon" href="IMG/perfil-personal.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -292,7 +292,7 @@
 
     <footer class="footer">
         <div class="social-links">
-            <a href="www.linkedin.com/in/aaron-gomez-delgado-a424812a3" target="_blank" class="social-icon">
+            <a href="https://www.linkedin.com/in/aaron-gomez-delgado-a424812a3" target="_blank" class="social-icon">
                 <img src="IMG/icons/linkdein.png" alt="LinkedIn">
             </a>
             <a href="https://github.com/aarongmez18" target="_blank" class="social-icon">
