--- a/main.html
+++ b/main.html
@@ -216,17 +216,17 @@
     <div class="card">
         <h3>RITA ROUGE</h3>
         <p>2024: Trabajé en el desarrollo de una solución basada en microservicios utilizando Spring Boot, donde implementé varios servicios para mejorar la escalabilidad y el mantenimiento de la aplicación. Además, optimicé el diseño de la interfaz de usuario de una aplicación Angular, modificando el CSS y HTML para mejorar la experiencia de usuario y la accesibilidad.</p>
-        <a href="https://github.com/aarongmez18/RitaRouge" target="_blank" class="btn-project">Ver Proyecto</a>
+        <a href="https://github.com/aarongmez18" target="_blank" class="btn-project">Ver Proyecto</a>
     </div>
     <div class="card">
         <h3>CHAOS CIRCLE</h3>
         <p>2024: Videojuego web personal que desarrollé utilizando JavaScript, programación de la interacción de las bolas con el jugador, utilizando funciones de aleatorización para el movimiento y la velocidad de las bolas, aumentando la dificultad del juego progresivamente.</p>
-        <a href="https://github.com/aarongmez18/CircleChaos" target="_blank" class="btn-project">Ver Proyecto</a>
+        <a href="https://github.com/aarongmez18" target="_blank" class="btn-project">Ver Proyecto</a>
     </div>
     <div class="card">
         <h3>SPOTIFY</h3>
         <p>2024: Desarrollé una aplicación Spotify utilizando Spring Boot y aplicando arquitectura hexagonal. Implementé Swagger para la documentación de la API, JWT para la autenticación de usuarios e Hibernate para la gestión de la base de datos.</p>
-        <a href="https://github.com/aarongmez18/Spotify" target="_blank" class="btn-project">Ver Proyecto</a>
+        <a href="https://github.com/aarongmez18" target="_blank" class="btn-project">Ver Proyecto</a>
     </div>
 </div>
 
