--- a/main.html
+++ b/main.html
@@ -21,7 +21,10 @@
     <title>Portafolios Aarón Gómez Delgado</title>
 </head>
 <style>
-
+html, body {
+    overflow-x: hidden;
+    width: 100%;
+}
 </style>
 <body>
 
@@ -231,10 +234,7 @@
             </div>
         </div>
     </div>
-</footer>
-
-            
-
+</footer>     
     <script src="JS/scrollFunction.js"></script>
 </body>
 </html>
